# trading-bot

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  unittests.yml
tests/: test_market_data_provider.py
trading_bot/: BinanceClient.py  BinanceMarketDataProvider.py  CryptoClient.py  Exchanges.py  GeminiClient.py  GeminiMarketDataProvider.py  MarketDataProvider.py  OrderPlacementManager.py  WebsocketClient.py  main.py  main2.py  run_binance_ws_server.py
trading_bot/account/: binance_exchange_account.py  exchange_account.py
trading_bot/client/: CryptoClient.py  binance_client.py  crypto_client.py
trading_bot/client/binance/: BinanceClient.py  binance_client.py
trading_bot/client/gemini/: GeminiClient.py
trading_bot/data/: market_data.py  ticker.py
trading_bot/data/constants/: strategy_constants.py
trading_bot/data/enums/: exchange.py  interval.py  intervals.py  time_units.py
trading_bot/data/models/: market_data.py  ticker.py
trading_bot/market_data/: MarketDataProvider.py  WebsocketClient.py  backtesting_client.py  binance_market_data_provider.py  binance_market_data_server.py  csv.csv  market_data_provider.py  test_websocket_client.py  websocket_client.py  websocket_server.py
trading_bot/market_data/binance/: BinanceMarketDataProvider.py  binance_market_data_provider.py
trading_bot/market_data/gemini/: GeminiMarketDataProvider.py
trading_bot/utils/: file_utils.py  logging.py  num_utils.py
ui/: package-lock.json
ui/src/: App.js  Dashboard.js  Login.js  styles.css
(+1 files in other folders)
